// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`interprets bear export file with mixed content 1`] = `
Object {
  "identifier": "0DE4CB36-2EFC-4207-9074-667CBAE25ABB-12048-0000D97D373A46D2",
  "items": Array [
    Object {
      "identifier": "wCdCGztny92Q8YVxMJGBeBxe/M0X6XNCH0gIigTO2jc=",
      "spec": Object {
        "content": Object {
          "body": Object {
            "attachments": Array [],
            "text": "This is a test cloze prompt",
          },
          "components": Object {
            "0": Object {
              "order": 0,
              "ranges": Array [
                Object {
                  "hint": null,
                  "length": 4,
                  "startIndex": 10,
                },
              ],
            },
          },
          "type": "cloze",
        },
        "type": "memory",
      },
    },
    Object {
      "identifier": "HsSkb6EQxnC4lUPQ66v1yjarOgo5aSXQPZ3QNErckGw=",
      "spec": Object {
        "content": Object {
          "answer": Object {
            "attachments": Array [],
            "text": "It makes B harder to read w.r.t A",
          },
          "body": Object {
            "attachments": Array [],
            "text": "What is the influence of A on B?",
          },
          "type": "qa",
        },
        "type": "memory",
      },
    },
    Object {
      "identifier": "IolmfjQEMhQ7/rivRDy23KqggsnH9RI51WuR78zMcwg=",
      "spec": Object {
        "content": Object {
          "answer": Object {
            "attachments": Array [],
            "text": "Which contains a completely valid answer.",
          },
          "body": Object {
            "attachments": Array [],
            "text": "This is another prompt.",
          },
          "type": "qa",
        },
        "type": "memory",
      },
    },
  ],
  "title": "Hello World",
  "url": "bear://x-callback-url/open-note?id=0DE4CB36-2EFC-4207-9074-667CBAE25ABB-12048-0000D97D373A46D2",
}
`;

exports[`interprets raw markdown file with mixed content 1`] = `
Object {
  "identifier": "/some/file/path/Hello World.md",
  "items": Array [
    Object {
      "identifier": "wCdCGztny92Q8YVxMJGBeBxe/M0X6XNCH0gIigTO2jc=",
      "spec": Object {
        "content": Object {
          "body": Object {
            "attachments": Array [],
            "text": "This is a test cloze prompt",
          },
          "components": Object {
            "0": Object {
              "order": 0,
              "ranges": Array [
                Object {
                  "hint": null,
                  "length": 4,
                  "startIndex": 10,
                },
              ],
            },
          },
          "type": "cloze",
        },
        "type": "memory",
      },
    },
    Object {
      "identifier": "HsSkb6EQxnC4lUPQ66v1yjarOgo5aSXQPZ3QNErckGw=",
      "spec": Object {
        "content": Object {
          "answer": Object {
            "attachments": Array [],
            "text": "It makes B harder to read w.r.t A",
          },
          "body": Object {
            "attachments": Array [],
            "text": "What is the influence of A on B?",
          },
          "type": "qa",
        },
        "type": "memory",
      },
    },
    Object {
      "identifier": "IolmfjQEMhQ7/rivRDy23KqggsnH9RI51WuR78zMcwg=",
      "spec": Object {
        "content": Object {
          "answer": Object {
            "attachments": Array [],
            "text": "Which contains a completely valid answer.",
          },
          "body": Object {
            "attachments": Array [],
            "text": "This is another prompt.",
          },
          "type": "qa",
        },
        "type": "memory",
      },
    },
  ],
  "title": "Hello World",
  "url": undefined,
}
`;
